# tutorial-vtk-pyqt

./: .gitignore  00_read_and_draw.py  02_embed_in_qt.py  03_connect_slider.py  04_connect_pick_events.py  README.md  glyph_ui.py  pyproject.toml  requirements.txt
